@@ -2,6 +2,8 @@
 Summary of notable changes and features
 
 ## Unreleased (dev)
+### Features
+ - add IRCv3 CAP account-notify
 
 ## [0.1.3]
 ### Features
